--- a/GIMJam/.vscode/settings.json
+++ b/GIMJam/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Player Movement.sln"
+    "dotnet.defaultSolution": "GIMJam.sln"
 }
