--- a/GIMJam/.gitignore
+++ b/GIMJam/.gitignore
@@ -12,6 +12,9 @@
 /[Uu]ser[Ss]ettings/
 *.log
 
+# make gitignore for webbuild
+/[Ww]eb[Bb]uild/
+
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
 *.blend1.meta
